==> magicworldos/PA-FlightControl/src/drivers/samv7/drv_hrt.c <==
#include <px4_config.h>
#include <px4_log.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <sys/types.h>
#include <stdbool.h>
#include <assert.h>
#include <debug.h>
#include <time.h>
#include <queue.h>
#include <errno.h>
#include <string.h>
#include <board_config.h>
#include <drivers/drv_hrt.h>
#include "chip.h"
#include "up_internal.h"
#include "up_arch.h"
#include <chip.h>
#include "sam_gpio.h"
#include "sam_tc.h"
# define HRT_TIMER 	0
# define HRT_TIMER 	1
# define HRT_TIMER 	2
# define HRT_TIMER 	3
# define HRT_TIMER_BASE			SAM_TC012_BASE
# define HRT_TIMER_BASE			SAM_TC345_BASE
# define HRT_TIMER_BASE			SAM_TC678_BASE
# define HRT_TIMER_BASE			SAM_TC901_BASE
# define HRT_TIMER_CLOCK		(BOARD_MCK_FREQUENCY/128)
# define  HRT_DESIRED_FREQUENCY 1000000
#define HRT_TIME_SCALE(_t)	((((_t) * HRT_TIMER_CLOCK) / USEC_PER_SEC) + 1)
#define HRT_COUNTER_SCALE(_c)	((_c) * USEC_PER_SEC) / HRT_TIMER_CLOCK
#define HRT_INTERVAL_MIN	50
#define HRT_INTERVAL_MAX	50000
#define HRT_COUNTER_PERIOD	65536
#define REG(_reg)	(*(volatile uint32_t *)(SAM_TC0_BASE + SAM_TC_CHAN_OFFSET(HRT_TIMER_CHANNEL) + _reg))
#define rCCR	REG(SAM_TC_CCR_OFFSET)
#define rCMR 	REG(SAM_TC_CMR_OFFSET)
#define rSMMR 	REG(SAM_TC_SMMR_OFFSET)
#define rRAB 	REG(SAM_TC_RAB_OFFSET)
#define rCV 	REG(SAM_TC_CV_OFFSET)
#define rRA 	REG(SAM_TC_RA_OFFSET)
#define rRB 	REG(SAM_TC_RB_OFFSET)
#define rRC 	REG(SAM_TC_RC_OFFSET)
#define rSR 	REG(SAM_TC_SR_OFFSET)
#define rIER 	REG(SAM_TC_IER_OFFSET)

static void
hrt_tim_init(void)
{
	uint32_t frequency;
	uint32_t actual;
	uint32_t cmr;
	int ret;

	/* We would like 1Mhz count rate */

	frequency = HRT_DESIRED_FREQUENCY;

	/* The pre-calculate values to use when we start the timer */

	ret = sam_tc_clockselect(frequency, &cmr, &actual);

	if (ret < 0)
	{
		PX4_PANIC("ERROR: Failed no divisor can be found (%d),for timer channel %d\n", ret, HRT_TIMER_CHANNEL);
		return;
	}

	/*  Verify that what we got was what we expected */

	ASSERT(actual == HRT_TIMER_CLOCK);

	/* Allocate the timer/counter and select its mode of operation
	 *
	 *   TC_CMR_TCCLKS       - Returned by sam_tc_clockselect
	 *   TC_CMR_CLKI=0       - Not inverted
	 *   TC_CMR_BURST_NONE   - Not gated by an external signal
	 *   TC_CMR_CPCSTOP=0    - Do not Stop the clock on an RC compare event
	 *   TC_CMR_CPCDIS=0     - Don't disable the clock on an RC compare event
	 *   TC_CMR_EEVTEDG_NONE - No external events (and, hence, no edges
	 *   TC_CMR_EEVT_TIOB    - ???? REVISIT
	 *   TC_CMR_ENET=0       - External event trigger disabled
	 *   TC_CMR_WAVSEL_UP    - TC_CV is incremented from 0 to 65535
	 *   TC_CMR_WAVE         - Waveform mode
	 *   TC_CMR_ACPA_NONE    - RA compare has no effect on TIOA
	 *   TC_CMR_ACPC_NONE    - RC compare has no effect on TIOA
	 *   TC_CMR_AEEVT_NONE   - No external event effect on TIOA
	 *   TC_CMR_ASWTRG_NONE  - No software trigger effect on TIOA
	 *   TC_CMR_BCPB_NONE    - RB compare has no effect on TIOB
	 *   TC_CMR_BCPC_NONE    - RC compare has no effect on TIOB
	 *   TC_CMR_BEEVT_NONE   - No external event effect on TIOB
	 *   TC_CMR_BSWTRG_NONE  - No software trigger effect on TIOB
	 */

	cmr |= (TC_CMR_BURST_NONE  | TC_CMR_EEVTEDG_NONE | TC_CMR_EEVT_TIOB   |
		TC_CMR_WAVSEL_UP   | TC_CMR_WAVE 		 | TC_CMR_ACPA_NONE   |
		TC_CMR_ACPC_NONE   | TC_CMR_AEEVT_NONE   | TC_CMR_ASWTRG_NONE |
		TC_CMR_BCPB_NONE   | TC_CMR_BCPC_NONE    | TC_CMR_BEEVT_NONE  |
		TC_CMR_BSWTRG_NONE);

	hrt_tch = sam_tc_allocate(HRT_TIMER_CHANNEL, cmr);

	if (!hrt_tch)
	{
		PX4_PANIC("ERROR: Failed to allocate timer channel %d\n", HRT_TIMER_CHANNEL);
		return;
	}

	irqstate_t flags = enter_critical_section();

	/* Start with 1 ms */

	uint64_t regval = HRT_TIME_SCALE(1000LL);

	ASSERT(regval <= UINT16_MAX);

	/* Set up to receive the callback when the Compare interrupt occurs */

	(void)sam_tc_attach(hrt_tch, hrt_tim_isr, hrt_tch, TC_INT_CPCS);

	/* Set RC so that an event will be triggered when TC_CV register counts
	 * up to RC.
	 */

	rRC = regval & UINT16_MAX;

	/* Start the counter */

	sam_tc_start(hrt_tch);

	/* Enable interrupts.  We should get the callback when the interrupt
	 * occurs.
	 */

	leave_critical_section(flags);
}

void hrt_tim_isr(TC_HANDLE tch, void *arg, uint32_t sr)
{
	/* grab the timer for latency tracking purposes */

	latency_actual = rCV;

#ifdef HRT_PPM_CHANNEL

	/* was this a PPM edge? */
	if (status & (SR_INT_PPM | SR_OVF_PPM))
	{
		/* if required, flip edge sensitivity */
# ifdef PPM_EDGE_FLIP
		rCCER ^= CCER_PPM_FLIP;
# endif

		hrt_ppm_decode(status);
	}

#endif

	/* do latency calculations */
	hrt_latency_update();

	/* run any callouts that have met their deadline */
	hrt_call_invoke();

	/* and schedule the next interrupt */
	hrt_call_reschedule();
}

hrt_abstime
hrt_absolute_time(void)
{
	hrt_abstime	abstime;
	uint32_t	count;
	irqstate_t	flags;

	/*
	 * Counter state.  Marked volatile as they may change
	 * inside this routine but outside the irqsave/restore
	 * pair.  Discourage the compiler from moving loads/stores
	 * to these outside of the protected range.
	 */
	static volatile hrt_abstime base_time;
	static volatile uint32_t last_count;

	/* prevent re-entry */
	flags = enter_critical_section();

	/* get the current counter value */
	count = rCV;

	/*
	 * Determine whether the counter has wrapped since the
	 * last time we're called.
	 *
	 * This simple test is sufficient due to the guarantee that
	 * we are always called at least once per counter period.
	 */
	if (count < last_count)
	{
		base_time += HRT_COUNTER_PERIOD;
	}

	/* save the count for next time */
	last_count = count;

	/* compute the current time */
	abstime = HRT_COUNTER_SCALE(base_time + count);

	leave_critical_section(flags);

	return abstime;
}

hrt_abstime
hrt_elapsed_time(const volatile hrt_abstime *then)
{
	irqstate_t flags = enter_critical_section();

	hrt_abstime delta = hrt_absolute_time() - *then;

	leave_critical_section(flags);

	return delta;
}

hrt_abstime
hrt_store_absolute_time(volatile hrt_abstime *now)
{
	irqstate_t flags = enter_critical_section();

	hrt_abstime ts = hrt_absolute_time();

	leave_critical_section(flags);

	return ts;
}

static void
hrt_call_internal(struct hrt_call *entry, hrt_abstime deadline, hrt_abstime interval, hrt_callout callout, void *arg)
{
	irqstate_t flags = enter_critical_section();

	/* if the entry is currently queued, remove it */
	/* note that we are using a potentially uninitialised
	   entry->link here, but it is safe as sq_rem() doesn't
	   dereference the passed node unless it is found in the
	   list. So we potentially waste a bit of time searching the
	   queue for the uninitialised entry->link but we don't do
	   anything actually unsafe.
	*/
	if (entry->deadline != 0)
	{
		sq_rem(&entry->link, &callout_queue);
	}

	entry->deadline = deadline;
	entry->period = interval;
	entry->callout = callout;
	entry->arg = arg;

	hrt_call_enter(entry);

	leave_critical_section(flags);
}

void
hrt_cancel(struct hrt_call *entry)
{
	irqstate_t flags = enter_critical_section();

	sq_rem(&entry->link, &callout_queue);
	entry->deadline = 0;

	/* if this is a periodic call being removed by the callout, prevent it from
	 * being re-entered when the callout returns.
	 */
	entry->period = 0;

	leave_critical_section(flags);
}
